--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!-- head definitions go here -->
-    </head>
-    <body>
-        <!-- the content goes here -->
-    </body>
+    <head><meta property="fb:pages" content="268899480190352" /></head>
+<body>
+<h1>Hello FACEBOOK articles</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
 </html>
